--- a/ios/WebApp/WebApp/webapp/index.html
+++ b/ios/WebApp/WebApp/webapp/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <p>My WebApp</p>
+        <a href="info/index.html">info</a><br />
+        <a href="about/index.html">about</a>
     </body>
 </html>
