--- a/ios/WebApp/WebApp/webapp/index.html
+++ b/ios/WebApp/WebApp/webapp/index.html
@@ -5,6 +5,7 @@
     <body>
         <p>My WebApp</p>
         <a href="info/index.html">info</a><br />
-        <a href="about/index.html">about</a>
+        <a href="about/index.html">about</a><br />
+        Date: <input name="demo" type="text"><br /> 
     </body>
 </html>
