--- a/ios/WebApp/WebApp/webapp/info/index.html
+++ b/ios/WebApp/WebApp/webapp/info/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <p>Info</p>
+        <a href="../index.html">My WebApp</a><br />
+        Date: <input name="demo" type="text"><br />
     </body>
 </html>
