--- a/ios/WebApp/WebApp/webapp/index.html
+++ b/ios/WebApp/WebApp/webapp/index.html
@@ -7,5 +7,6 @@
         <a href="info/index.html">info</a><br />
         <a href="about/index.html">about</a><br />
         Date: <input name="demo" type="text"><br /> 
+        <a href="webapp-demo://WebApp.demo/debug?abc=123">call WebApp</a><br />
     </body>
 </html>
